testsuite/tests/parser/should_fail/pfail051.alan
main () : proc
{
   writeString("This is a multi line string
		This program is wrong\n");
}
