testsuite/tests/parser/should_fail/pfail051.stderr
pfail051.alan:3:16: Error: Parse error on input `"'
	Cannot parse char `"'

pfail051.alan:3:22: Error: Parse error on input `is'
	Probably missing `)'

